--- a/prime_home/templates/prime_home/testimonies_page.html
+++ b/prime_home/templates/prime_home/testimonies_page.html
@@ -408,6 +408,187 @@
                                 </div>
                                 <div class="item">
                                     <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_02.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_03.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_04.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_05.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_06.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_07.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_08.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_09.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_10.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_11.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_12.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_13.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_14.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_15.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_16.jpg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_17.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_18.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_19.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_20.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_21.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_22.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_23.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_24.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_25.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_26.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_27.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_28.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_29.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_30.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_31.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                   
+                                <div class="item">
+                                    <div class="work">
                                         <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/11.jpg')}});">
                                         </div>
                                     </div>
