--- a/prime_home/templates/prime_home/testimonies_page.html
+++ b/prime_home/templates/prime_home/testimonies_page.html
@@ -586,7 +586,168 @@
                                         </div>
                                     </div>
                                 </div>
-                   
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_32.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_33.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_34.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_35.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_36.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_38.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_39.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_40.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_41.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_42.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_43.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_44.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_45.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_46.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_47.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_48.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_49.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_50.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_51.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_52.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_53.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_54.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_55.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_56.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_57.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_58.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="work">
+                                        <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/departure_59.jpeg')}});">
+                                        </div>
+                                    </div>
+                                </div>                             
                                 <div class="item">
                                     <div class="work">
                                         <div class="img d-flex align-items-center justify-content-center" style="background-image: url({{url_for('prime_home.static', filename='img/testimonies/departure/11.jpg')}});">
