--- a/prime_home/templates/prime_home/about_page.html
+++ b/prime_home/templates/prime_home/about_page.html
@@ -52,11 +52,11 @@
         <div class="row"> 
             <div class="col-lg-4"> 
                 <h2 class="h5 text-primary">Who Are We</h2> 
-                <h3 class="h1 mb-4 text-dark">We are one of the best korean language learning center in the philippines</h3> 
+                <h3 class="h1 mb-4 text-dark">We are one of the best korean language learning center in the Philippines</h3> 
             </div>
             <div class="col-lg-8 col-xl-7 offset-xl-1"> 
-                <h4 class="h3 mb-4 text-dark">We are one of the best korean language learning center in the philippines</h4>
-                <p class="lead mb-4">                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec volutpat sem ac elit rutrum rhoncus. Donec a lacinia metus. Morbi volutpat interdum sem, vitae aliquam odio tempor blandit. </p>
+                <h4 class="h3 mb-4 text-dark">We want to help you guys and having a progressive future with us learn Korean language with us!!!!.</h4>
+                <p class="lead mb-4">Prime Korean Language and Review Center offers a lot of services like learning how to speak Korean as fluent as the native Koreans, improving your listening skills, writing and reading, We are also assisting Filipino's to pass the EPS-TOPIK exam for those who wants to work in South Korea as factory workers. We are helping Filipinos to achieve their dreams and fulfill their goals to lift up the status of their living</p>
                 <div class="row">
                     <div class="col-md-5">
                         <h4 class="mb-3 text-dark">Vision</h4> 
