--- a/prime_home/templates/prime_home/about_page.html
+++ b/prime_home/templates/prime_home/about_page.html
@@ -141,7 +141,23 @@
                                             
                                             <ul>
                                                 <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_teacher_1.jpg')}}"><span><b> CRISTINE DAEL </b><br>TEACHER|SECRETARY</span></a>
-                                                
+                                                	<div class="content">  
+															<p> Welcome students!
+                                                                <br>
+																We're so glad you're here.
+																<br>
+																<br>
+																Allow me to introduce myself. I am Teacher Cristine and I am so excited to share my expertise and be able to inspire you.
+																<br>
+																<br>
+																Learning is a meaningful adventure we could ever experience, and we are here to fill your journey  towards learning with so many interesting topics ,skills, and technical assistance that would help you to become more efficient and globally competitive employees. 
+																<br>
+																<br>
+																PRIME KLC has prepared so many activities that will boost your confidence in achieving your goals and become successful in the future.
+																Come and enjoy my class! Be ready for the new version of yourselves.
+																See you soon!
+																</p>
+														</div>
                                                 </li>
                                                 <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_teacher_2.jpg')}}"><span> <b>MAEVELLYN OLESCO</b><br>TEACHER|SECRETARY</span></a></li>
                                                 <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_1.jpg')}}"><span> <b>KATHLEEN FATIM OMILAO RAMOS</b> <br>TEACHER</span></a></li>
