--- a/prime_home/templates/prime_home/about_page.html
+++ b/prime_home/templates/prime_home/about_page.html
@@ -128,7 +128,7 @@
         <div class="row">
             <div class="tree">
                 <ul>
-                    <li> <a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/ceo.jpg')}}"><span><b>JONWEL SUPRESENCIA</b><br>C.E.O</span></a>
+                    	<li> <a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/ceo.jpg')}}"><span><b>JONWEL SUPRESENCIA</b><br>C.E.O</span></a>
                         <ul>
                                     <li> <a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/admi_head.jpg')}}"><span><b>SALOME SUPRESENCIA</b><br>VICE PRESIDENT</span></a></li>	
                                 <ul>
@@ -142,34 +142,44 @@
                                             <ul>
                                                 <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_teacher_1.jpg')}}"><span><b> CRISTINE DAEL </b><br>TEACHER|SECRETARY</span></a>
                                                 	<div class="content">  
-															<p> Welcome students!
-                                                                <br>
-																We're so glad you're here.
-																<br>
-																<br>
-																Allow me to introduce myself. I am Teacher Cristine and I am so excited to share my expertise and be able to inspire you.
-																<br>
-																<br>
-																Learning is a meaningful adventure we could ever experience, and we are here to fill your journey  towards learning with so many interesting topics ,skills, and technical assistance that would help you to become more efficient and globally competitive employees. 
-																<br>
-																<br>
-																PRIME KLC has prepared so many activities that will boost your confidence in achieving your goals and become successful in the future.
-																Come and enjoy my class! Be ready for the new version of yourselves.
-																See you soon!
-																</p>
-														</div>
-                                                </li>
-                                                <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_teacher_2.jpg')}}"><span> <b>MAEVELLYN OLESCO</b><br>TEACHER|SECRETARY</span></a></li>
-                                                <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_1.jpg')}}"><span> <b>KATHLEEN FATIM OMILAO RAMOS</b> <br>TEACHER</span></a></li>
-                                                <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_2.jpg')}}"><span> <b>JAY-AR MALDO </b><br>TEACHER</span></a></li>
-                                            </ul>
-                                            <ul>
+							p> Welcome students!<br>We're so glad you're here.<br><br>
+							Allow me to introduce myself. I am Teacher Cristine and I am so excited to share my expertise and be able to inspire you.<br><br>
+							Learning is a meaningful adventure we could ever experience, and we are here to fill your journey  towards learning with so many interesting topics ,skills, and technical assistance that would help you to become more efficient and globally competitive employees. <br><br>							
+							PRIME KLC has prepared so many activities that will boost your confidence in achieving your goals and become successful in the future.Come and enjoy my class! Be ready for the new version of yourselves.<br>
+							See you soon!</p></div> </li>												
+                                                <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_teacher_2.jpg')}}"><span> <b>MAEVELLYN OLESCO</b><br>TEACHER|SECRETARY</span></a>
+							<div class="content">  
+							<p> Hello there,<br><br> 
+							This is teacher Maevellyn, I am so excited to have you in my class. As an educator I am grateful to be one of the tools of your success. I assure that our learning process will be a good foundation and fun.<br><br> 									
+							Learning is the best thing to do, so that we can aim our goal and I confidently believe that you will. <br><br>																									
+							I hope to see you soon. 😊</p></div></li>								
+						<li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_1.jpg')}}"><span> <b>KATHLEEN FATIM OMILAO RAMOS</b> <br>TEACHER</span></a>
+							div class="content">  
+							<p> 안녕하세요 여러분! I am Teacher Kath, and I welcome you to Prime Language and Tech. Center. Here in Prime we value you. And just like our name, PRIME will provide you the best possible quality of learning that you will need to achieve your dream. I believe in you, and I believe that one day your dreams will come true. I know it's been a tough journey for everyone but I will guide you until we reach the end of the road -- your dream. And always remember why you started dreaming, is it for you? Your family? Your loved ones? So whenever you find yourself doubting if you can reach your goal, just remember why you started. Remember everything that you've gone through, all your sacrifices and fears that you've overcome. So never ever give up. I know you can do it. And I'll be more than happy to help and guide you with your journey.
+							</p></div>						
+						
+                                                <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_2.jpg')}}"><span> <b>JAY-AR MALDO </b><br>TEACHER</span></a>
+							<div class="content">  
+							<p>안녕하세요 여러분! /HELLO EVERYONE 😍 <br><br>								
+							"The capacity to learn is a GIFT; the ability to learn is a SKILL; the willingness to learn is a CHOICE."									
+							Given the current circumstances, PRIME Language and Technology Center will look different. We will work together to maintain the health and safety standards against COVID-19 pandemic, while sustaining learning Korean language and personalized attention that is synonymous with PRIME.
+							As your mentor I encourage you to think about how you will move forward every day toward earning your certificate and reach the graduation stage.									
+							PRIME "the center of learning korean language" offers a lot to keep you on the road and reach your dream to work in South Korea.We are going to spend a lot of time strengthening your reading,listening and writing skills.<br><br>									
+							This year is going to be an adventure.I can assure that our class will be full of fun and excitement.I hope you’re just as excited as I am to begin.<br><br>									
+							This is Mr. JAYR MALDO your teacher in Korean Language.SEE YOU<br><br>
+							THANK YOU!</p></div></li>								
+                                            </ul>									
+					    <ul>
                                                 <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_3.jpg')}}"><span> <b>ROYCE MARIE LABIAN </b><br>TEACHER</span></a></li>
                                                 <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_4.jpg')}}"><span> <b>MA. THERESA CATALAN </b><br>TEACHER</span></a></li>
-                                                <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_5.jpg')}}"><span> <b>ARLENE GALIPOSO </b><br>TEACHER</span></a></li>
+                                                <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/teacher_5.jpg')}}"><span> <b>ARLENE GALIPOSO </b><br>TEACHER</span></a>
+							<div class="content">  
+							<p> 안녕하세요! <br><br>								
+							This is teacher Arlene Your korean teacher. I'm so excited to meet you and It is my pleasure to have you in my class. We're going to have fabulous days full of fun and learning. The Korean language is not that easy but I'm here! I'll make it easier for you.  Remember The journey of a thousand miles begins with one step, and this is the first step. Let's learn together and may our dreams come true.<br><br>
+							I hope to see you soon keep safe and god bless.	</p></div></li>							
                                                 <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/os_marketing_1.jpg')}}"><span> <b>RUSSEL GALPO </b><br>OFFICE STAFF | MARKETING</span></a></li>
-                                            </ul>
-                                            <ul>
+                                            </ul>										
+					    <ul>
                                                 <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/sec_1.jpg')}}"><span> <b>DANGELLI ROSE MUÑOZ </b><br>SECRETARY</span></a></li>
                                                 <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/vp_bmanager_2.jpg')}}"><span> <b>DANYLIL ASTURIAS </b><br>SECRETARY</span></a></li>
                                                 <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <b>MELODY MARIE MACALISANG </b><br>SECRETARY</span></a></li>
@@ -185,7 +195,7 @@
                                             <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/tricities.jpg')}}"><span> <b>TRICITIES </b><br>BOOKKEPER</span></a></li>
                                             <li><a href="#"><img src="{{url_for('prime_home.static', filename='img/organization/prime_logo.jpg')}}"><span> <b>LIKES TEAM </b><br>IT</span></a></li>
                                             </ul>	
-                                    </ul>					
+                                    	</ul>					
                                 </ul>
                         </ul>
                     </li>
